; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_sample_fmt.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_opt.c_set_string_sample_fmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_SAMPLE_FMT_NB = common dso_local global i32 0, align 4
@av_get_sample_fmt = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"sample format\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i8*, i32*)* @set_string_sample_fmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_string_sample_fmt(i8* %0, i32* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* @AV_SAMPLE_FMT_NB, align 4
  %14 = load i32, i32* @av_get_sample_fmt, align 4
  %15 = call i32 @set_string_fmt(i8* %9, i32* %10, i8* %11, i32* %12, i32 %13, i32 %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  ret i32 %15
}

declare dso_local i32 @set_string_fmt(i8*, i32*, i8*, i32*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
